# LanXin-MNN-Refactor

./: .gitignore  ARCHITECTURE.md  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/libs/: README.md
app/src/main/: AndroidManifest.xml
app/src/main/assets/live2d/: index.html
app/src/main/kotlin/com/lanxin/refactor/: LanXinRefactorApp.kt  MainActivity.kt
app/src/main/kotlin/com/lanxin/refactor/cloud/: OpenAiCompatibleCloudChatClient.kt
app/src/main/kotlin/com/lanxin/refactor/paths/: LanXinPaths.kt  ModelFolderAccess.kt
app/src/main/kotlin/com/lanxin/refactor/settings/: CloudSettingsStore.kt
app/src/main/kotlin/com/lanxin/refactor/ui/: CloudSettingsScreen.kt  CompanionScreen.kt  FullScreenPetOverlay.kt  MemoryScreen.kt  ModelPathPickerRow.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/kotlin/com/lanxin/refactor/cloud/: OpenAiCompatibleCloudChatClientTest.kt
app/src/test/kotlin/com/lanxin/refactor/paths/: LanXinPathsTest.kt  ModelFolderAccessTest.kt
companion/: build.gradle.kts
companion/src/main/kotlin/com/lanxin/companion/: ConversationHistory.kt  ConversationHistoryStore.kt  LocalCompanionSession.kt
companion/src/test/kotlin/com/lanxin/companion/: CloudMultiTurnTest.kt  ConversationHistoryPersistenceTest.kt  ConversationHistoryStoreTest.kt  ConversationHistoryTest.kt  LocalCompanionSessionRouteTest.kt  LocalStandaloneTest.kt
core-memory/: build.gradle.kts
core-memory/src/main/kotlin/com/lanxin/core/memory/: MemoryItem.kt  (+6 more)
gradle/: libs.versions.toml
local-llm-core/: build.gradle.kts  consumer-rules.pro
local-llm-core/src/main/cpp/: CMakeLists.txt  mnn_lanxin_jni.cpp  mnn_lanxin_jni_stub.cpp
local-llm-domain/: build.gradle.kts
voice/: build.gradle.kts
voice/src/main/kotlin/com/lanxin/voice/: AndroidSystemTtsEngine.kt  AsrEngine.kt  PcmAudioPlayer.kt  PcmAudioRecorder.kt  PcmRmsAnalyzer.kt  PetDisplayState.kt  PreferNativeTtsEngine.kt  RecordedAudio.kt  TtsEngine.kt  VadAutoStopRecorder.kt  VadSilenceDetector.kt  VoiceEngineState.kt  VoiceModelPaths.kt
voice/src/test/kotlin/com/lanxin/voice/: PcmAudioIoTest.kt  PcmRmsAnalyzerTest.kt  PreferNativeTtsEngineTest.kt  StubVoiceEnginesTest.kt  VadSilenceDetectorTest.kt  VoiceModelPathsTest.kt
(+20 files in other folders)
